<resources>
    <string name="app_name">Exodus</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="home_text_enjoy">Enjoy</string>
    <string name="home_text_message">Your vacation with us</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="re_password">Re-type Password</string>
    <string name="home_title">Explore</string>
    <string name="search">search</string>
    <string name="photo_desc">trip ,vote or agency photo</string>
    <string name="filters">Filters</string>
    <string name="price">Price</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="filter">Filter</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="agency_photo">agency Photo</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="trip_photo">trip photo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
