<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FilterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/filters"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:autofillHints="@string/city"
            android:background="@drawable/boarder_colored"
            android:fontFamily="@font/roboto_slab"
            android:gravity="center"
            android:hint="@string/city"
            android:inputType="textAutoComplete"
            android:padding="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:autofillHints="@string/city"
            android:background="@drawable/boarder_colored"
            android:fontFamily="@font/roboto_slab"
            android:gravity="center"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/etFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:autofillHints="@string/city"
                android:background="@drawable/boarder_colored"
                android:fontFamily="@font/roboto_slab"
                android:gravity="center"
                android:hint="@string/from"
                android:inputType="date"
                android:padding="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/etTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:autofillHints="@string/city"
                android:background="@drawable/boarder_colored"
                android:fontFamily="@font/roboto_slab"
                android:gravity="center"
                android:hint="@string/to"
                android:inputType="date"
                android:padding="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:targetApi="o" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/filter_btn"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/filter"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/clear_filters"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


</ScrollView>