<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Log_In_Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/login"
        android:textColor="#D5696969"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/user_icon"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:textColor="#D5000000"
        android:textColorHint="#C4807C7C"
        android:layout_margin="15dp"
        android:drawableLeft="@drawable/user_icon"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/password_icon"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="#D5000000"
        android:textColorHint="#C4807C7C"
        android:drawablePadding="10dp"
        android:layout_margin="15dp"
        android:drawableLeft="@drawable/password_icon"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:padding="15dp"
        android:background="@drawable/login_dialog_background"
        android:textColor="#FFFFFF"
        />
</LinearLayout>